--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,6 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/payload-g-front/ws:latest', '.']
 images:
-- 'us-central1-docker.pkg.dev/$PROJECT_ID/gpc-ws/ws:latest'
+- 'us-central1-docker.pkg.dev/$PROJECT_ID/payload-g-front/ws:latest'
 options:
   logging: CLOUD_LOGGING_ONLY
