--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/payload-g-front/ws:latest', '.']
+  args: ['build', '-t', 'southamerica-east1-docker.pkg.dev/$PROJECT_ID/payload-g-front/ws:latest', '.']
 images:
 - 'us-central1-docker.pkg.dev/$PROJECT_ID/payload-g-front/ws:latest'
 options:
